--- a/Heatmapper/View/WorkoutTableViewCell.xib
+++ b/Heatmapper/View/WorkoutTableViewCell.xib
@@ -35,11 +35,10 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x9N-bl-zp9" userLabel="Date">
                                             <rect key="frame" x="505" y="0.0" width="291" height="22"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" name="navBarTint"/>
+                                            <color key="textColor" name="textPrimary"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="GNh-00-oCb" userLabel="Heart Rate and Calories Stack View">
                                     <rect key="frame" x="0.0" y="27" width="796" height="22"/>
@@ -174,9 +173,6 @@
         <image name="heart.fill" width="34" height="31"/>
         <image name="map.fill" width="41" height="41"/>
         <image name="speedometer" width="41" height="41"/>
-        <namedColor name="navBarTint">
-            <color red="0.96470588235294119" green="0.84705882352941175" blue="0.37647058823529411" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="textAlternate">
             <color red="1" green="0.49803921568627452" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
